--- a/index.html
+++ b/index.html
@@ -101,20 +101,22 @@
 
         </div>
         <div class="information">
+            <h2>About me</h2>
             <ul>
                 <li>
-                    Innovative optimized solution seeker. Eager to learn new technology, and be able to work under high
+                    → Innovative optimized solution seeker. Eager to learn new technology, and be able to work under
+                    high
                     pressure. I can work in an English working environment. I love coding beautiful and helpful web.
                     Programming is my passion and my career-developing goal.
                 </li>
                 <li>
-                    I am a dynamic and enthusiastic person, always with a progressive spirit, eager to learn and
+                    → I am a dynamic and enthusiastic person, always with a progressive spirit, eager to learn and
                     discover
                     new things. Although my expertise is in programming, I still love design tools as well as photo
                     editing.
 
                 </li>
-                <li> My short-term goal is to try to practice at the company, acquire training and work in a
+                <li>→ My short-term goal is to try to practice at the company, acquire training and work in a
                     professional
                     environment.
                     My long-term goal is to become an official employee of the company, promoting my capacity to create
@@ -126,41 +128,42 @@
 
     <!-- slide--art -->
     <div class="art">
-        <div class="slide-image">
-            <!-- Swiper -->
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img src="./images/1.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./images/2.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./images/3.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./images/4.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./images/5.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./images/6.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./images/7.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="./images/8.HEIC" />
-                    </div>
+        <h2>I love Drawing and here are some of my art works:</h3>
+            <div class="slide-image">
+                <!-- Swiper -->
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="./images/1.jpg" />
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./images/2.jpg" />
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./images/3.jpg" />
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./images/4.jpg" />
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./images/5.jpg" />
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./images/6.jpg" />
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./images/7.jpg" />
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./images/8.HEIC" />
+                        </div>
 
 
+                    </div>
+                    <div class="swiper-pagination"></div>
                 </div>
-                <div class="swiper-pagination"></div>
+                <!-- Initialize Swiper -->
             </div>
-            <!-- Initialize Swiper -->
-        </div>
     </div>
 
     <div class="test">
