--- a/index.html
+++ b/index.html
@@ -58,26 +58,26 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " href="#" onclick="showHeroes()">Home</a>
+                            <a id="home-link" class="nav-link" href="#" onclick="showHeroes()">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about" onclick="showAbout()">Overviews</a>
+                            <a id="about-link" class="nav-link" href="#about" onclick="showAbout()">Overviews</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#resume" onclick="showResume()">Resume</a>
+                            <a id="resume-link" class="nav-link" href="#resume" onclick="showResume()">Resume</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#projects" onclick="showProjects()">Projects</a>
+                            <a id="projects-link" class="nav-link" href="#projects"
+                                onclick="showProjects()">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contact" onclick="showContact()">Contact</a>
+                            <a id="contact-link" class="nav-link" href="#contact" onclick="showContact()">Contact</a>
                         </li>
                     </ul>
-                    <!-- <span class="navbar-text">
-                        Navbar text with an inline element
-                    </span> -->
+
                 </div>
 
             </div>
@@ -89,73 +89,116 @@
         <div class="text">
             <p>I can help your business to</p>
             <h1> Build Amazing Website</h1>
+            <section id="contact" class="contact ">
+                <div class="card bg-gradient-primary-to-secondary" style="width: 58rem;">
+                    <img loading="lazy" src="./images/face2.png" class="card-img-top h-25 w-25  align-self-center "
+                        alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Contact Me</h5>
+                        <p class="card-text">Please contact me at office hours!</p>
+                    </div>
+                    <ul class="list-group list-group-flush text-lowercase ">
+                        <li class="list-group-item bg-gradient-primary-to-secondary text-white">EMAIL:
+                            lapnv.work@gmail.com</li>
+                        <li class="list-group-item bg-gradient-primary-to-secondary text-white">Phone/Zalo: 0365000282
+                        </li>
+                        <li class="list-group-item bg-gradient-primary-to-secondary text-white">Github:
+                            https://github.com/LAP200I
+                        </li>
+
+                    </ul>
+                    <div class="card-body">
+                        <div class="social">
+                            <a href="https://www.facebook.com/nvlap.ziip/"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/__nvlap.zip"><i class="fab fa-instagram"></i></a>
+
+                            <a href="https://github.com/LAP200I"> <i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+            </section>
         </div>
     </div>
     <!-- overviews -->
-    <div class="about" id="about">
-        <div class="profile">
-            <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
-            <!-- Watch a tutorial on how to do this on YouTube (link)-->
-            <img src="./images/face2.png" alt="">
+    <div class="about bg-gradient-primary-to-secondary" id="about">
+
+
+        <div class="profile bg-black bg-opacity-50 ">
+
+            <img loading="lazy" src="./images/face2.png" alt="">
 
 
         </div>
         <div class="information">
-            <h2>About me</h2>
+
+
+            <div class="text-center ">
+                <h1 class="display-5 fw-bolder mb-0"><span class="text-white fs-1 d-inline ">About me</span>
+                </h1>
+            </div>
             <ul>
                 <li>
-                    → Innovative optimized solution seeker. Eager to learn new technology, and be able to work under
+                    → Innovative optimized solution seeker. Eager to learn new technology, and be able to
+                    work under
                     high
-                    pressure. I can work in an English working environment. I love coding beautiful and helpful web.
+                    pressure. I can work in an English working environment. I love coding beautiful and
+                    helpful web.
                     Programming is my passion and my career-developing goal.
                 </li>
                 <li>
-                    → I am a dynamic and enthusiastic person, always with a progressive spirit, eager to learn and
+                    → I am a dynamic and enthusiastic person, always with a progressive spirit, eager to
+                    learn and
                     discover
-                    new things. Although my expertise is in programming, I still love design tools as well as photo
+                    new things. Although my expertise is in programming, I still love design tools as well
+                    as photo
                     editing.
 
                 </li>
-                <li>→ My short-term goal is to try to practice at the company, acquire training and work in a
+                <li>→ My short-term goal is to try to practice at the company, acquire training and work in
+                    a
                     professional
                     environment.
-                    My long-term goal is to become an official employee of the company, promoting my capacity to create
+                    My long-term goal is to become an official employee of the company, promoting my
+                    capacity to create
                     value for the company.
                 </li>
             </ul>
+
+
+
+
         </div>
     </div>
 
     <!-- slide--art -->
-    <div class="art" id="art">
+    <div class="art bg-opacity-50 " id="art">
         <h2>I love Drawing and here are some of my art works:</h3>
-            <div class="slide-image">
+            <div class="slide-image bg-opacity-10">
                 <!-- Swiper -->
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="./images/1.jpg" />
+                            <img loading="lazy" src="./images/1.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/2.jpg" />
+                            <img loading="lazy" src="./images/2.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/3.jpg" />
+                            <img loading="lazy" src="./images/3.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/4.jpg" />
+                            <img loading="lazy" src="./images/4.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/5.jpg" />
+                            <img loading="lazy" src="./images/5.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/6.jpg" />
+                            <img loading="lazy" src="./images/6.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/7.jpg" />
+                            <img loading="lazy" src="./images/7.jpg" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/8.HEIC" />
+                            <img loading="lazy" src="./images/8.HEIC" />
                         </div>
 
 
@@ -178,7 +221,8 @@
                         <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                         <!-- Download resume button-->
                         <!-- Note: Set the link href target to a PDF file within your project-->
-                        <a class="btn btn-primary px-4 py-3" href="#!">
+                        <a class="btn btn-primary px-4 py-3 d-block d-sm-inline-block" href="#!"
+                            onclick="window.open('file_path', '_blank')" download="Nguyen_Van_Lap">
                             <div class="d-inline-block bi bi-download me-2"></div>
                             Download Resume
                         </a>
@@ -228,6 +272,7 @@
                                 </div>
                                 <div class="col-lg-8">
                                     <div>Faculty of Information Technology learning in English.</div>
+                                    <div>GPA: 2.80</div>
                                 </div>
                             </div>
                         </div>
@@ -266,20 +311,7 @@
                                             Postman</div>
                                     </div>
                                 </div>
-                                <!-- <div class="row row-cols-1 row-cols-md-3">
-                                    <div class="col mb-4 mb-md-0">
-                                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Network
-                                            Security</div>
-                                    </div>
-                                    <div class="col mb-4 mb-md-0">
-                                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Adobe
-                                            Software Suite</div>
-                                    </div>
-                                    <div class="col">
-                                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">User
-                                            Interface Design</div>
-                                    </div>
-                                </div> -->
+
                             </div>
                             <!-- Languages list-->
                             <div class="mb-0">
@@ -367,66 +399,41 @@
             <div class="text-center mb-5">
                 <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projects</span></h1>
             </div>
-            <div class="row gx-5 justify-content-center">
-                <div class="col-lg-11 col-xl-9 col-xxl-8">
-                    <!-- Project Card 1-->
-                    <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
-                        <div class="card-body p-0">
-                            <div class="d-flex align-items-center">
-                                <div class="p-5">
-                                    <h2 class="fw-bolder">Project Name 1</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum
-                                        aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad
-                                        asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+            <div class="card shadow border-0 rounded-4 mb-5">
+                <div class="card-body p-5">
+                    <div class="row align-items-center gx-5">
+                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                            <div class="bg-light p-4 rounded-4">
+                                <div class="text-secondary fw-bolder mb-2">SEP 2019 - NOV 2023</div>
+                                <div class="mb-2">
+                                    <div class="small fw-bolder">Ha Noi University</div>
+                                    <!-- <div class="small text-muted">Learn by English</div> -->
                                 </div>
-                                <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="...">
+                                <div class="fst-italic">
+                                    <div class="small text-muted">BACHELOR'S </div>
+                                    <div class="small text-muted"> INFORMATION SYSTEM</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- Project Card 2-->
-                    <div class="card overflow-hidden shadow rounded-4 border-0">
-                        <div class="card-body p-0">
-                            <div class="d-flex align-items-center">
-                                <div class="p-5">
-                                    <h2 class="fw-bolder">Project Name 2</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum
-                                        aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad
-                                        asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                                </div>
-                                <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="...">
-                            </div>
+                        <div class="col-lg-8">
+                            <div>Faculty of Information Technology learning in English.</div>
+                            <div>GPA: 2.80</div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section id="contact" class="contact">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-            </ul>
-            <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
-            </div>
-        </div>
-    </section>
-    <section class="py-5 bg-gradient-primary-to-secondary text-white">
-        <div class="container px-5 my-5">
+
+    <section class="py-2 bg-gradient-primary-to-secondary text-white">
+        <div class="container px-2 my-5">
             <div class="text-center">
-                <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
+                <h2 class="display-7 fw-bolder mb-4">Let's build something together</h2>
                 <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" onclick="showContact()"
                     href="#contact">Contact me</a>
+
             </div>
+
         </div>
     </section>
 
