--- a/index.html
+++ b/index.html
@@ -525,10 +525,10 @@
         </div>
     </section>
 
-    <section class="py-2 bg-gradient-2 text-white">
-        <div class="container pt-1 pb-0 mb-0 my-5">
+    <section class="p-2 border-bottom-0 bg-gradient-2 text-white">
+        <div class="container  pt-lg-2 ">
             <div class="text-center">
-                <h2 class="display-7 fw-bolder mb-4">Let's build something together</h2>
+                <h2 class="display-7  pt-lg-2 fw-bolder mb-4">Let's build something together</h2>
                 <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" onclick="showContact()"
                     href="#contact">Contact me</a>
 
