--- a/index.html
+++ b/index.html
@@ -427,7 +427,8 @@
 
 
                             </div>
-                            <div>Source Code: https://github.com/NVL2001/front-end-ss2.git</div>
+                            <div> Demo: <a target="_blank"
+                                    href="https://youtu.be/SALLKFxziY0">https://youtu.be/SALLKFxziY0</a></div>
                         </div>
                     </div>
                 </div>
@@ -484,7 +485,8 @@
                             <div>Create a GUI for managing courses, students, and enrolments using Java's Swing API and
                                 use SQLite for the database. <br>
                             </div>
-                            <div>https://github.com/LAP200I/CourseManProg-java.git</div>
+                            <div>Demo: <a target="_blank"
+                                    href="https://youtu.be/7kJiuCZJ_SA">https://youtu.be/7kJiuCZJ_SA</a></div>
                         </div>
                     </div>
                 </div>
