--- a/index.html
+++ b/index.html
@@ -105,13 +105,14 @@
                         <h5 class="card-title">Contact Me</h5>
                         <p class="card-text">Please contact me at office hours!</p>
                     </div>
-                    <ul class="list-group list-group-flush text-lowercase ">
+                    <ul class="list-group list-group-flush  ">
                         <li class="list-group-item bg-gradient-primary-to-secondary text-white">EMAIL:
                             lapnv.work@gmail.com</li>
                         <li class="list-group-item bg-gradient-primary-to-secondary text-white">Phone/Zalo: 0365000282
                         </li>
-                        <li class="list-group-item bg-gradient-primary-to-secondary text-white">Github:
-                            https://github.com/LAP200I
+                        <li class="list-group-item bg-gradient-primary-to-secondary text-white">Linkedin:
+                            www.linkedin.com/in/lapnguyen2001
+
                         </li>
 
                     </ul>
@@ -232,7 +233,7 @@
                             <div class="row align-items-center gx-5">
                                 <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                     <div class="bg-light p-4 rounded-4">
-                                        <div class="text-primary fw-bolder mb-2">Feb 2023 - April 2023</div>
+                                        <div class="text-primary fw-bolder mb-2">Feb 2023 - March 2023</div>
                                         <div class="small fw-bolder"> Intern ReactJS/NodeJS</div>
                                         <div class="small text-muted"> by FSoft Academy</div>
                                         <div class="small text-muted">FPT Software</div>
@@ -544,8 +545,7 @@
         <div class="social">
             <a target="_blank" href="https://www.facebook.com/nvlap.ziip/"><i class="fab fa-facebook"></i></a>
             <a target="_blank" href="https://www.instagram.com/__nvlap.zip"><i class="fab fa-instagram"></i></a>
-            <a target="_blank" href="https://www.linkedin.com/in/lap-nguyen-2b0b3b1b2/"><i
-                    class="fab fa-linkedin"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/lapnguyen2001/"><i class="fab fa-linkedin"></i></a>
             <a target="_blank" href="https://github.com/LAP200I"> <i class="fab fa-github"></i></a>
         </div>
     </footer>
