--- a/index.html
+++ b/index.html
@@ -547,6 +547,9 @@
             <a target="_blank" href="https://www.instagram.com/__nvlap.zip"><i class="fab fa-instagram"></i></a>
             <a target="_blank" href="https://www.linkedin.com/in/lapnguyen2001/"><i class="fab fa-linkedin"></i></a>
             <a target="_blank" href="https://github.com/LAP200I"> <i class="fab fa-github"></i></a>
+            <!-- play game icon -->
+
+            <a target="_blank" href="https://lap200i.github.io/slicegame/"><i class="fas fa-gamepad"></i></a>
         </div>
     </footer>
 
