--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lap Nguyen</title>
     <!-- favicon.ico -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/icons8-we-heart-it-48.png" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -424,12 +424,45 @@
                                 In this project, I have responsibility for front-end part. <br>
                                 I had built the codebase for the project, build the UI using API from back-end. <br>
                                 My flow of work is: implement the product page, cart page, checkout page, and modify the
-                                style, responsive of the whole UI.
+                                style, responsive of the whole UI. <br>
+                                SDLC: Agile Scrum with 3 iterations.
 
 
                             </div>
                             <div> Demo: <a target="_blank"
                                     href="https://youtu.be/SALLKFxziY0">https://youtu.be/SALLKFxziY0</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card shadow border-0 rounded-4 mb-5">
+                <div class="card-body p-5">
+                    <div class="row align-items-center gx-5">
+                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                            <div class="bg-light p-4 rounded-4">
+                                <div class="text-secondary fw-bolder mb-2">NOV 2022 - JAN 2023</div>
+                                <div class="mb-2">
+                                    <div class="small fw-bolder">Ecommerce Website for Selling Wooden Decorations</div>
+                                    <div class="small text-muted">Individual project</div>
+                                </div>
+                                <div class="fst-italic">
+                                    <div class="small text-muted">PHP, JS, HTML, CSS</div>
+                                    <div class="small text-muted">MySQL
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-8 col-md-6 col-sm-4">
+                            <div>Build an e-commerce website from scratch .
+                                <br>
+                                I use my knowledge to build this website. I tried to deploy it on Heroku but now it's
+                                not free, therefore I stopped the server.
+                                <br>
+
+
+                            </div>
+                            <div>https://github.com/LAP200I/Hem-Decor-web.git
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -488,39 +521,6 @@
                             </div>
                             <div>Demo: <a target="_blank"
                                     href="https://youtu.be/7kJiuCZJ_SA">https://youtu.be/7kJiuCZJ_SA</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card shadow border-0 rounded-4 mb-5">
-                <div class="card-body p-5">
-                    <div class="row align-items-center gx-5">
-                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
-                            <div class="bg-light p-4 rounded-4">
-                                <div class="text-secondary fw-bolder mb-2">JAN 2022 - MAY 2022</div>
-                                <div class="mb-2">
-                                    <div class="small fw-bolder">Ecommerce Website for Selling Wooden Decorations</div>
-                                    <div class="small text-muted">Team of 4 - Educational project</div>
-                                </div>
-                                <div class="fst-italic">
-                                    <div class="small text-muted">PHP, JS, HTML, CSS</div>
-                                    <div class="small text-muted">MySQL
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-8 col-md-6 col-sm-4">
-                            <div>Build an e-commerce website from scratch with a real customer.
-                                <br>
-                                My role in this project is to build and modify the UI, implement the product page, cart
-                                page,
-                                checkout page, and modify the
-                                style, responsive of the whole UI. <br>
-                                SDLC: Agile Scrum with 3 iterations.
-
-                            </div>
-                            <div>https://github.com/LAP200I/Hem-Decor-web.git
-                            </div>
                         </div>
                     </div>
                 </div>
