--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
                         <li class="nav-item">
 
                             <a id="home-link" class="nav-link" href="#" onclick="showHeroes()"> <i
-                                    class="fas fa-home"></i>
+                                    class="fas fa-home mx-1"></i>
                                 Home</a>
                         </li>
                         <li class="nav-item">
                             <a id="about-link" class="nav-link" href="#about" onclick="showAbout()"><i
-                                    class="fas fa-address-card"></i> Overviews</a>
+                                    class="fas fa-address-card  mx-1"></i> Overviews</a>
                         </li>
                         <li class="nav-item">
                             <a id="resume-link" class="nav-link" href="#resume" onclick="showResume()"><i
-                                    class="fas fa-file"></i> Resume</a>
+                                    class="fas fa-file  mx-1"></i> Resume</a>
                         </li>
                         <li class="nav-item">
                             <a id="projects-link" class="nav-link" href="#projects" onclick="showProjects()"><i
-                                    class="fas fa-layer-group"></i> Projects</a>
+                                    class="fas fa-layer-group  mx-1"></i> Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a id="contact-link" class="nav-link" href="#" onclick="showContact()"><i
-                                    class="fas fa-phone-square"></i> Contact</a>
+                            <a id="contact-link" class="nav-link" href="#contact" onclick="showContact()"><i
+                                    class="fas fa-phone-square  mx-1"></i> Contact</a>
                         </li>
                     </ul>
 
@@ -97,29 +97,8 @@
         <div class="text">
             <p>I can help your business to</p>
             <h1> Build Amazing Website</h1>
-            <section id="contact" class="contact ">
-                <div class="card bg-gradient-primary-to-secondary ">
-                    <img loading="lazy" src="./images/icons8-handshake-96.png"
-                        class="card-img-top h-25 w-auto  align-self-center " alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Contact Me</h5>
-                        <p class="card-text">Please contact me at office hours!</p>
-                    </div>
-                    <ul class="list-group list-group-flush  ">
-                        <li class="list-group-item bg-gradient-primary-to-secondary text-white">EMAIL:
-                            lapnv.work@gmail.com</li>
-                        <li class="list-group-item bg-gradient-primary-to-secondary text-white">Phone/Zalo: 0365000282
-                        </li>
-                        <li class="list-group-item bg-gradient-primary-to-secondary text-white">Linkedin:
-                            www.linkedin.com/in/lapnguyen2001
 
-                        </li>
 
-                    </ul>
-                    <div class="card-body">
-
-                    </div>
-            </section>
         </div>
     </div>
     <!-- overviews -->
@@ -127,7 +106,7 @@
 
 
         <div class="profile bg-black bg-opacity-50 ">
-            <img loading="lazy" src="./images/face2.png" alt="">
+            <img loading="lazy" src="./images/anhdaidien-rmbg.png" alt="">
         </div>
         <div class="information">
 
@@ -527,13 +506,52 @@
             </div>
         </div>
     </section>
+    <section id="contact" class="contact ">
+        <div class="container p-0 mb-5 m-auto">
+            <div class="card bg-gradient-primary-to-secondary m-auto">
+                <img loading="lazy" src="./images/icons8-handshake-96.png"
+                    class="card-img-top h-25 w-auto  align-self-center " alt="">
+                <div class="card-body text-white text-center">
+                    <h5 class="card-title">Contact Me</h5>
+                    <p class="card-text">Please contact me at office hours!</p>
+                </div>
+                <ul class="list-group list-group-flush text-white text-decoration-none ">
+                    <li class="list-group-item bg-gradient-primary-to-secondary text-white">
+                        <a href="mailto:lapnv.work@gmail.com">EMAIL:
+                            lapnv.work@gmail.com</a>
+                    </li>
+                    <li class="list-group-item bg-gradient-primary-to-secondary text-white">
+                        <a href="tel:+84365000282"> Phone/Zalo: 0365000282</a>
+
+                    </li>
+                    <li class="list-group-item bg-gradient-primary-to-secondary text-white">
+                        <a href="http://www.linkedin.com/in/lapnguyen2001">Linkedin:
+                            www.linkedin.com/in/lapnguyen2001
+                        </a>
+                    </li>
+
+                </ul>
+                <div class="card-body">
+                    <div class="social d-flex align-items-center justify-content-center">
+                        <a target="_blank" href="https://www.facebook.com/nvlap.ziip/"><i
+                                class="fab fa-facebook"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/__nvlap.zip"><i
+                                class="fab fa-instagram"></i></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/lapnguyen2001/"><i
+                                class="fab fa-linkedin"></i></a>
+                        <a target="_blank" href="https://github.com/LAP200I"> <i class="fab fa-github"></i></a>
+
+
+                    </div>
+                </div>
+            </div>
+    </section>
 
     <section class="p-2 border-bottom-0 bg-gradient-2 text-white">
         <div class="container  pt-lg-2 ">
-            <div class="text-center">
-                <h2 class="display-7  pt-lg-2 fw-bolder mb-4">Let's build something together</h2>
-                <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" onclick="showContact()"
-                    href="#contact">Contact me</a>
+            <div class="social text-center ">
+                <h2 class="display-7  pt-lg-2 fw-bolder mb-4">Let's play</h2>
+                <a target="_blank" href="https://lap200i.github.io/slicegame/"><i class="fas fa-gamepad"></i></a>
 
             </div>
 
@@ -542,14 +560,17 @@
 
     <!-- footer -->
     <footer class="bg-gradient-1">
-        <div class="social">
+        <!-- <div class="social">
             <a target="_blank" href="https://www.facebook.com/nvlap.ziip/"><i class="fab fa-facebook"></i></a>
             <a target="_blank" href="https://www.instagram.com/__nvlap.zip"><i class="fab fa-instagram"></i></a>
             <a target="_blank" href="https://www.linkedin.com/in/lapnguyen2001/"><i class="fab fa-linkedin"></i></a>
             <a target="_blank" href="https://github.com/LAP200I"> <i class="fab fa-github"></i></a>
-            <!-- play game icon -->
 
             <a target="_blank" href="https://lap200i.github.io/slicegame/"><i class="fas fa-gamepad"></i></a>
+        </div> -->
+        <!-- copyright -->
+        <div class="text-center p-3 text-white" style="background-color: rgba(0, 0, 0, 0.2); border-radius: 10px;">
+            © 2023 _nvlap.zip
         </div>
     </footer>
 
