--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
                         <!-- Download resume button-->
                         <!-- Note: Set the link href target to a PDF file within your project-->
                         <a class="btn btn-primary px-xl-4 py-xl-3 p-sm-0  d-block d-sm-inline-block"
-                            href="./pdf/CV Intern FrontEnd- Nguyen Van Lap.pdf" target="_blank"
-                            download="Nguyen_Van_Lap">
+                            href="./pdf/CV -Nguyen Van Lap.pdf" target="_blank" download="CV_Nguyen_Van_Lap">
                             <div class="d-inline-block bi bi-download m-0 "> Download</div>
                         </a>
                     </div>
